--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "firebase": "^9.6.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.6",
     "sass": "^1.48.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
